--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,5 +23,9 @@
         <item name="android:windowExitAnimation">@anim/popup_hide</item>
     </style>
 
+    <style name="PreferenceTheme">
+        <item name="android:textColor">#FFF</item>
+        <item name="android:textColorSecondary">#FFF</item>
+    </style>
 
 </resources>
